--- a/views/get_request.html
+++ b/views/get_request.html
@@ -10,29 +10,34 @@
 	<form id="form" action="/process_get" method="GET">
 		<input type="text" name="username" id="username">
 		<input type="text" name="pwd" id="pwd">
-		<input type="submit" value="submit" id="btn">
+		<input type="button" value="submit" id="btn">
 	</form>
 	<script src="/js/jquery.min.js"></script>
 	<script>
-		// var username = $("#username").val();
-		// var pwd = $("#pwd").val();
-		// var datastr={"username":username,"pwd":pwd},
-		// // $("#btn").on("click",function(e){
-		// // 	// $.ajax({
-		// // 	// 	url:"/process_get",
-		// // 	// 	data:datastr,
-		// // 	// 	dataType:"json",
-		// // 	// 	success:function (obj) {
-		// // 	// 		console.log(obj);
-		// // 	// 	},
-		// // 	// 	error:function (err) {
-		// // 	// 		console.log(err);
-		// // 	// 	}
-		// // 	// });
-		// // 	console.log(1)
-		// // })
-		// // console.log($("#btn"));
-		// console.log(1);
+		
+		
+		$("#btn").on("click",function(){
+			var username = $("#username").val();
+			console.log(username);
+			var pwd = $("#pwd").val();
+			console.log(pwd);
+			var datastr={"username":username,"pwd":pwd};
+			$.ajax({
+				url:"/process_get",
+				data:datastr,
+				dataType:"json",
+				success:function (obj) {
+					console.log(obj);
+					console.log("success");
+				},
+				error:function (err) {
+					console.log(err);
+					console.log("error");
+				}
+			});
+			console.log(1)
+		})
+		
 	</script>
 </body>
 </html>
